fixed font again on mobile still too big

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3948,5 +3948,5 @@ input, select, textarea {
 @media screen and (max-width: 527px) {
     
     .panel p {
-        font-size: 12px;
+        font-size: 10px;
 }
